# scryfall-discord-bot

./: LICENSE  README.md  go.mod  go.sum  magefile.go  main.go  manage_bot.py  pyproject.toml
bots/mtg-card-bot/: main.go
discord/: bot.go
docs/: commands.md  old-school-art.md
mtg_card_bot/: bot.py  config.py  logging.py  scryfall.py
pkg/config/: config.go
pkg/discord/: bot.go
pkg/scryfall/: client.go
src/mtg_card_bot/: __init__.py  bot.py  scryfall.py
tests/: test_bot.py
