[project]
name = "mtg-card-bot"
version = "2.0.0"
description = "A Discord bot for looking up Magic: The Gathering cards using the Scryfall API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stephen Sawyer" }]
requires-python = ">=3.13"
keywords = ["discord", "magic-the-gathering", "mtg", "scryfall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Typing :: Typed",
]
dependencies = [
    "discord.py>=2.0.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/dunamismax/mtg-card-bot"
Repository = "https://github.com/dunamismax/mtg-card-bot"
Issues = "https://github.com/dunamismax/mtg-card-bot/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.9",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.scripts]
mtg-card-bot = "mtg_card_bot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mtg_card_bot"]

[tool.hatch.build.targets.sdist]
include = [
    ".env.example",
    "CONTRIBUTING.md",
    "LICENSE",
    "README.md",
    "manage_bot.py",
    "src/mtg_card_bot",
    "pyproject.toml",
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["manage_bot.py", "src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = ["--cov=mtg_card_bot", "--cov-report=term-missing"]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["mtg_card_bot"]

[tool.coverage.report]
skip_covered = true
show_missing = true
